--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "cicd",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node dist/server.js",
     "test": "jest",
     "dev": "nodemon ./src/server.ts",
-    "build": "tsc"
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
